# pg_rrule

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose-postgresql.yml  docker-compose.yml
sql/: pg_rrule.sql  pg_rrule.sql.in  uninstall_pg_rrule.sql
src/: pg_rrule.c  pg_rrule.h
test/: build.sh  build_only_rrule.sh  manual.sql
test/expected/: base.out
test/sql/: base.sql
